--- a/internship.html
+++ b/internship.html
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/everfi/jobs/1792383'>Job Application for Design & Marketing Intern at EVERFI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/everfi/jobs/1792383'>Job Application for Design & Marketing Intern at EVERFI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -111,11 +111,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qxkaVfwG&k=Job&j=oPnCafwI&__jvst=Employee&__jvsd=sjkAHgwF&__jvsc=Twitter&bid=nkrHTKwA&jvi=oPnCafwI,Job&jvk=Job'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caterwings.join.com/jobs/251421-internship-sales-support-london-m-f-caterwings-rocket-internet'>Job @ CaterWings (London): Internship Sales Suppor... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -301,7 +301,7 @@
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://postman.workable.com/j/805387FB21'>Postman - Jobs: Data Science Intern, Analytics - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postman.workable.com/j/805387FB21'>Postman - Jobs: Data Science Intern, Analytics - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -444,7 +444,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/258350-internship-content-marketeer-eng-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
+<h5><a href='https://marketplacedistri.join.com/jobs/258350-internship-content-marketeer-eng-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
